[package]
name = "gm-utils"
version = "0.1.0"
authors = ["Dejan Kos <com.dejan.kos@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
description = "Cli tool for managing git branch and maven project version at the same time"

[dependencies]
structopt = "0.3"
roxmltree = "0.7.3"
exitcode = "1.1.2"
colored = "1.8"

[[bin]]
name = "gm"
path = "src/main.rs"